--- a/templates/details.html
+++ b/templates/details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem; margin: 1rem;">
         <img src="{{ trip.cover_url }}" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">{{ trip.hotel }}, {{ trip.country }}</h5>
